FrogWeatherApiService.kt created. With that the app can now make api requests to get the forecast. Created data classes for Json objects. Implemented location permission request. The app now updates the location at startup if the last location is older than 30 minutes (when saving a new location the time difference between the old and the new location is checked in the SettingsViewModel.kt).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,8 @@
     <string name="lbl_detect_location_menu_title">Detect Location</string>
     <string name="lbl_settings_menu_title">Settings</string>
     <string name="lbl_cancel_button">Cancel</string>
+    <string name="lbl_location_settings_dialog_title">Location Settings</string>
+    <string name="lbl_settings_button">settings</string>
+    <string name="msg_location_permisson_dialog">Location is not enabled. Do you wish to go to the settings menu?</string>
 
 </resources>
